--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+	<div id="carouselExampleControls" class="carousel slide d-none d-sm-block" data-bs-ride="carousel">
 		<div class="carousel-inner">
 			<div class="carousel-item active">
 				<img src="./images/img-1.jpg" class="d-block w-100" alt="..." height="550">
