--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Semana 17</title>
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-</head>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
+	</head>
 <body>
 
 	<!-- HEADER -->
@@ -152,7 +154,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-12 cards pt-3 justify-content-center d-flex">
+			<div class="col-12 cards pt-3 pb-3 justify-content-center d-flex">
 				<div class="card d-none d-md-block d-lg-none" style="width: 18rem;"+>
 					<img src="./images/card-4.jpg" class="card-img-top" alt="...">
 					<div class="card-body">
@@ -178,6 +180,32 @@
 		</div>
 	</div>
 
+	<!-- FOOTER -->
+	<div class="container-fluid footer" style="background-color: #4e394a;">
+		<div class="row">
+			<div class="col-6 p-3 ps-5">
+				<nav class="navbar">
+					<div class="container d-flex align-items-center">
+						<a class="navbar-brand d-flex" href="#">
+							<img class="icon" src="./images/bootstrap-logo.png" alt="" width="45" height="45">
+							<span class="ps-3">Boostrap</span>
+						</a>
+					</div>
+				</nav>
+			</div>
+			<div class="col-6 justify-content-end align-items-center d-flex">
+					<nav class="nav icons-footer pe-5">
+						<a class="nav-link active" aria-current="page" href="#"><i class="bi bi-facebook"></i></a>
+						<a class="nav-link" href="#"><i class="bi bi-instagram"></i></a>
+						<a class="nav-link" href="#"><i class="bi bi-tiktok"></i></a>
+					</nav>
+			</div>
+			<div class="col-12">
+				<hr class="m-1">
+				<p class="m-0 p-2">Todos los derechos reservados 2023</p>
+			</div>
+		</div>
+	</div>
   
 	
 	
