--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 	</div>
 
 	<!-- FOOTER -->
-	<div class="container-fluid footer" style="background-color: #4e394a;">
+	<div class="container-fluid footer">
 		<div class="row">
 			<div class="col-6 p-3 ps-5">
 				<nav class="navbar">
