--- a/index.html
+++ b/index.html
@@ -14,22 +14,29 @@
 	<!-- HEADER -->
 	<div class="container-fluid">
 		<div class="row navbar-light bg-light">
-			<div class="col-6">
-				<nav class="navbar">
-					<div class="container">
-						<a class="navbar-brand" href="#">
-							<img class="icon" src="./images/bootstrap-logo.png" alt="" width="59" height="59">
-						</a>
-					</div>
-				</nav>
-			</div>
-			<div class="col-6 justify-content-end align-items-center d-flex">
-				<nav class="nav nav">
-					<a class="nav-link active" aria-current="page" href="#">Home</a>
-					<a class="nav-link" href="#">Features</a>
-					<a class="nav-link" href="#">Pricing</a>
-				</nav>
-			</div>
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				<div class="container-fluid">
+				  <a class="navbar-brand" href="#">
+					<img class="icon ms-3" src="./images/bootstrap-logo.png" alt="" width="59" height="59">
+				  </a>
+				  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				  </button>
+				  <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+					<ul class="navbar-nav nav-links">
+					  <li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">Home</a>
+					  </li>
+					  <li class="nav-item">
+						<a class="nav-link" href="#">Features</a>
+					  </li>
+					  <li class="nav-item">
+						<a class="nav-link" href="#">Pricing</a>
+					  </li>
+					</ul>
+				  </div>
+				</div>
+			  </nav>
 		</div>
 	</div>
 
